--- a/IRKit/IRKitResources/IRMorsePlayerViewController.xib
+++ b/IRKit/IRKitResources/IRMorsePlayerViewController.xib
@@ -17,7 +17,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="img_prepare.png" translatesAutoresizingMaskIntoConstraints="NO" id="75I-xP-EJA">
-                    <rect key="frame" x="0.0" y="164" width="320" height="240"/>
+                    <rect key="frame" x="0.0" y="105" width="320" height="240"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="Z5u-aJ-LQZ"/>
@@ -25,18 +25,18 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Volume Up  " textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="320" translatesAutoresizingMaskIntoConstraints="NO" id="laK-A4-rN4">
-                    <rect key="frame" x="0.0" y="58" width="320" height="105"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="105"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="320" id="Q1j-Ci-Fa4"/>
                         <constraint firstAttribute="height" constant="105" id="nNc-pX-4An"/>
                     </constraints>
-                    <fontDescription key="fontDescription" name="Avenir-Light" family="Avenir" pointSize="32"/>
+                    <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="32"/>
                     <color key="textColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k2I-eo-h4L" customClass="MPVolumeView">
-                    <rect key="frame" x="60" y="124" width="200" height="60"/>
+                    <rect key="frame" x="60" y="65" width="200" height="60"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <color key="tintColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
@@ -54,7 +54,7 @@
                             <color key="backgroundColor" red="0.0" green="0.6588235294" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                             <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            <state key="normal" title="Start" image="icn_check.png">
+                            <state key="normal" title=" Start" image="icn_check2.png">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
                             <connections>
@@ -79,18 +79,17 @@
                 <constraint firstAttribute="centerX" secondItem="laK-A4-rN4" secondAttribute="centerX" id="6Uv-N3-sd1"/>
                 <constraint firstAttribute="centerX" secondItem="k2I-eo-h4L" secondAttribute="centerX" id="Aum-P1-bFb"/>
                 <constraint firstAttribute="centerX" secondItem="75I-xP-EJA" secondAttribute="centerX" id="JrE-hd-4PJ"/>
+                <constraint firstItem="laK-A4-rN4" firstAttribute="top" secondItem="74" secondAttribute="top" id="UMb-J5-0kX"/>
                 <constraint firstAttribute="centerX" secondItem="WD0-F1-zgM" secondAttribute="centerX" id="UkP-7S-vdd"/>
                 <constraint firstAttribute="bottom" secondItem="WD0-F1-zgM" secondAttribute="bottom" id="YCA-mx-5Hp"/>
-                <constraint firstAttribute="centerY" secondItem="75I-xP-EJA" secondAttribute="centerY" id="l7Q-xX-Dat"/>
-                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="laK-A4-rN4" secondAttribute="bottom" constant="1" id="wAh-lG-6S0"/>
+                <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="laK-A4-rN4" secondAttribute="bottom" id="wAh-lG-6S0"/>
                 <constraint firstItem="75I-xP-EJA" firstAttribute="top" secondItem="k2I-eo-h4L" secondAttribute="bottom" constant="-20" id="xKH-3s-IXD"/>
             </constraints>
-            <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
     </objects>
     <resources>
-        <image name="icn_check.png" width="24" height="24"/>
+        <image name="icn_check2.png" width="24" height="24"/>
         <image name="img_prepare.png" width="320" height="240"/>
     </resources>
 </document>
